# functional_programming_stack

./: README.md
back-end/: dune-project
